bk_ida/gobmkida/g0/gtp_start_response
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/gtp_start_response/src/interface/gtp.c:707:14: error: use of undeclared identifier 'asc_4DDAB8'
gtp_printf( &asc_4DDAB8[2]); 
             ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/gtp_start_response/src/interface/gtp.c:709:13: error: use of undeclared identifier 'asc_4DDAB8'
gtp_printf( asc_4DDAB8); 
            ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/gtp_start_response/src/interface/gtp.c:713:14: error: use of undeclared identifier 'asc_4DDAB8'
gtp_printf( &asc_4DDAB8[4]); 
             ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/gtp_start_response/src/obj/2/gtp.o] Error 1
